--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -134,9 +134,9 @@ footer
   justify-self left
   align-self center
 .footer-date
-  grid-column-start 3
-  grid-column-end 3
+  grid-column-start 2
+  grid-column-end 2
   grid-row-start 1
   grid-row-end 1
-  justify-self right
+  justify-self center
   align-self center  
