--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -94,6 +94,9 @@ a:hover
   Site Layout
 */
 .content
+  display grid
+  grid-template-columns 20px auto 20px
+  grid-template-rows auto 40px
   width 100%
   padding 0 5%
 
