--- a/views/tidbits/footer.pug
+++ b/views/tidbits/footer.pug
@@ -1,6 +1,5 @@
 mixin footer
   footer
-    .footer-home
-      a(href='/') Home
-    .footer-date
-      span || 2018 ||
+    .footer-misc
+      a(href='/retejo') retejo 
+      span &centerdot; 2018
