--- a/views/blog.pug
+++ b/views/blog.pug
@@ -1,4 +1,10 @@
 extends layout
 
 block content
-  h1= "Blog code goes here"
+  .post-editor
+    form(method='POST' action='/blog')
+      div.post-title-field
+        input#title(type='text', placeholder='· title ·', name='title')
+      div.post-content-field
+        textarea#content(type='text', placeholder='· content ·', name='content')
+      button(type='submit') Post
