--- a/views/index.pug
+++ b/views/index.pug
@@ -1,4 +1,5 @@
 extends layout
 
 block content
-  h1(style='text-align: center')= title + ' | Coming Soon'
+  .home
+    h1= title + ' | Coming Soon'
