--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -103,9 +103,17 @@ button
 .content
   display grid
   grid-template-columns 20px auto 20px
-  grid-template-rows auto 40px
+  grid-template-rows auto auto 40px
   width 100%
   padding 0 5%
+
+.home
+  grid-column-start 2
+  grid-column-end 2
+  grid-row-start 1
+  grid-row-end 1
+  justify-self center
+  align-self center
   
 /*
   Blog · Post Viewer
@@ -125,21 +133,40 @@ button
 .post-title-field
   padding 10px
   input
+    color #c8c1a9
     background-color #212121
     border 0
-    height 40px
+    width 100%
+    height 24px
+    font-size 24px
+    text-align center
+    ::placeholder
+      text-align center
+      opacity 1
+      font-size 24px
 .post-content-field
   padding 10px
   textarea
+    color #c8c1a9
     background-color #212121
-    border 0
-    height 200px
+    border 1px solid #2e2e2e
+    height 30em
     width 100%
+    font-size 16px
+    ::placeholder
+      text-align center
+      opacity 1
 
 /*
   About
 */
 .about
+  grid-column-start 2
+  grid-column-end 2
+  grid-row-start 2
+  grid-row-end 2
+  align-self center
+  justify-self center
   h1
     text-align center
   
