Changed name of blog view to writing

--- a/views/writing.pug
+++ b/views/writing.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   .post-editor
-    form(method='POST' action='/blog')
+    form(method='POST' action='/writing')
       div.post-title-field
         input#title(type='text', placeholder='· title ·', name='title')
       div.post-content-field
