Changed link in footer to point at github page

--- a/views/tidbits/footer.pug
+++ b/views/tidbits/footer.pug
@@ -1,5 +1,5 @@
 mixin footer
   footer
     .footer-misc
-      a(href='/retejo') retejo 
+      a(href='https://github.com/drisc/') github 
       span &centerdot; 2018
