--- a/views/tidbits/nav.pug
+++ b/views/tidbits/nav.pug
@@ -1,6 +1,7 @@
 mixin nav
   nav(class='nav')
-    img.logo(src='images/logo.svg')
+    a.logo(href='/')
+      img.logo(src='images/logo.svg')
     ul.nav-list
       li.nav-item
         a(href='/art') Art
