--- a/views/writing.pug
+++ b/views/writing.pug
@@ -1,10 +1,5 @@
 extends layout
+include tidbits/post_editor
 
 block content
-  .post-editor
-    form(method='POST' action='/writing')
-      div.post-title-field
-        input#title(type='text', placeholder='· title ·', name='title')
-      div.post-content-field
-        textarea#content(type='text', placeholder='· content ·', name='content')
-        button(type='submit') Post
+  //+post_editor
