Added information to about page

--- a/views/about.pug
+++ b/views/about.pug
@@ -5,4 +5,12 @@ block content
     img(src='images/cory_b&w.jpg' title='A Person, name of Driscoll')
   .about
     h1 Cory Driscoll
-    h2 Other information currently offline
+    p 23-ish web dude, drinks teas and presses keys
+    p(style='text-align: center') Sometimes ventures off the island
+    span email &centerdot; 
+    a(href='mailto:cory@drisc.io') cory@drisc.io
+    br
+    span twitter &centerdot; 
+    a(href='https://twitter.com/driscio') @driscio
+
+
