Changed tags for grids and content areas

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -13,7 +13,7 @@ html
   background-color #212121
   min-width 250px
 body
-  
+
   line-height 1em
   font-family 'Source Sans Pro', 'Open Sans', sans-serif
 ::selection
@@ -27,10 +27,10 @@ body
 h1, h2, h3, h4, h5, h6
   line-height 1em!important
   padding-bottom 0
-a:link, a:visited, a:active 
+a:link, a:visited, a:active
   color #eee
   text-decoration none
-a:hover 
+a:hover
   color #F93
   -o-transition .2s
   -ms-transition .2s
@@ -60,7 +60,7 @@ button
   padding 10px 0 0 0
 .login-field input
   height 25px
-  margin 0 auto 
+  margin 0 auto
   background-color black
   border #eee solid 1px
   border-radius 0
@@ -85,7 +85,7 @@ button
     grid-template-rows 50px
     color #fff
     text-decoration none
-    li 
+    li
       float left
       list-style-type none
     width 100%
@@ -133,25 +133,23 @@ a:hover .webring
   -moz-transition .2s
   -webkit-transition .2s
   transition .2s
-  
+
 /*
   Site Layout
 */
-.content
+.grid
   display grid
   grid-template-columns 20px auto 20px
   grid-template-rows auto auto 40px
   width 100%
   padding 0 5%
 
-.home
-  grid-column-start 2
-  grid-column-end 2
-  grid-row-start 1
-  grid-row-end 1
+.content
+  grid-column 2
+  grid-row 1
   justify-self center
   align-self center
-  
+
 /*
   Blog · Post Viewer
 */
@@ -207,7 +205,7 @@ a:hover .webring
   justify-self center
   h1
     text-align center
-  
+
 
 .avatar
   padding 24px
