--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,8 +22,8 @@ html
     link(rel='apple-touch-icon', sizes='72x72', href='/images/favicons/favicon-72-precomposed.png')
     link(rel='apple-touch-icon', href='/images/favicons/favicon-57.png')
   body
-    div(class='container')
+    div.container
       +nav
-      div(class='content')
+      div.grid
         block content
       +footer
