Nicer styling on about page

--- a/views/about.pug
+++ b/views/about.pug
@@ -7,10 +7,9 @@ block content
     h1 Cory Driscoll
     p 23-ish web dude, drinks teas and presses keys
     p(style='text-align: center') Sometimes ventures off the island
-    span email &centerdot; 
-    a(href='mailto:cory@drisc.io') cory@drisc.io
-    br
-    span twitter &centerdot; 
-    a(href='https://twitter.com/driscio') @driscio
-
-
+    p(style='text-align: center')
+      span emails &nbsp; &bullet; &nbsp;
+      a(href='mailto:cory@drisc.io') cory@drisc.io
+      br
+      span twitter &nbsp; &bullet; &nbsp;
+      a(href='https://twitter.com/driscio') @driscio
