--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -25,8 +25,10 @@ body
 ::-webkit-input-placeholder
   text-align center
 h1, h2, h3, h4, h5, h6
-  line-height 1em!important
+  line-height 1em
   padding-bottom 0
+h1.responsive-text
+  font-size: 5vh
 a:link, a:visited, a:active
   color #eee
   text-decoration none
@@ -79,24 +81,24 @@ button
   display grid
   grid-template-columns 10px auto 10px
   grid-template-rows 75px
-  @media only screen and (min-width: 990px)
+  @media only screen and (min-width: 600px)
     display grid
     grid-template-columns 250px auto 250px
-    grid-template-rows 50px
+    grid-template-rows 75px
     color #fff
     text-decoration none
     li
       float left
       list-style-type none
     width 100%
-    height 50px
+    height 75px
     position relative
     background #212121
     line-height normal
     text-align center
 .nav-list
   display none
-  @media only screen and (min-width: 990px)
+  @media only screen and (min-width: 600px)
     display block
     grid-column-start 3
     grid-column-end 3
@@ -121,8 +123,6 @@ button
   width 75px
   justify-self center
   align-self center
-  @media only screen and (min-width: 990px)
-    width 50px
 .webring
   height 25px
   margin-top -3px
@@ -143,6 +143,9 @@ a:hover .webring
   grid-template-rows auto auto 40px
   width 100%
   padding 0 5%
+  @media only screen and (max-width:600px)
+    grid-template-columns 2px auto 2px
+    grid-template-rows auto auto 40px
 
 .content
   grid-column 2
@@ -197,10 +200,8 @@ a:hover .webring
   About
 */
 .about
-  grid-column-start 2
-  grid-column-end 2
-  grid-row-start 2
-  grid-row-end 2
+  grid-column 2
+  grid-row 2
   align-self center
   justify-self center
   h1
@@ -209,17 +210,15 @@ a:hover .webring
 
 .avatar
   padding 24px
-  grid-column-start 2
-  grid-column-end 2
-  grid-row-start 1
-  grid-row-end 1
+  grid-column 2
+  grid-row 1
   justify-self center
   align-self center
   img
     display inline-block
     border-radius 230px 48px 230px 48px
     border 0px solid white
-    max-height 250px
+    width 50vw
     margin 0 auto
     -webkit-filter grayscale(70%)
     filter grayscale(70%)
@@ -237,7 +236,6 @@ a:hover .webring
     -moz-transition .2s
     -webkit-transition .2s
     transition .2s
-
 /*
   Footer
 */
