--- a/views/layout.pug
+++ b/views/layout.pug
@@ -21,6 +21,7 @@ html
     link(rel='apple-touch-icon', sizes='180x180', href='/images/favicons/favicon-180-precomposed.png')
     link(rel='apple-touch-icon', sizes='72x72', href='/images/favicons/favicon-72-precomposed.png')
     link(rel='apple-touch-icon', href='/images/favicons/favicon-57.png')
+    meta(name='viewport' content='width=device-width, initial-scale=1.0')
   body
     div.container
       +nav
