Added Wiki page and icons

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -154,6 +154,44 @@ a:hover .webring
   align-self center
 
 /*
+  Wiki
+*/
+.wiki-header
+  img
+    width 20%
+    margin 0 auto
+ul.catagories
+  display flex
+  flex-wrap wrap
+  max-width 65vw
+  padding 0
+  margin 0 -10px
+  justify-content space-evenly
+  list-style-type none
+  text-align center
+  @media only screen and (max-width: 500px)
+    justify-content space-around
+li.wiki-item
+  width 150px
+  margin 0 10px
+  margin-bottom 10px
+  a
+  display block
+  padding 5px
+  img
+    display block
+    width 100px
+    margin 20px 20px
+    float left
+
+span.wiki-label
+  display block
+.wiki-desc
+  span
+  display block
+  font-size 85%
+
+/*
   Blog · Post Viewer
 */
 
