--- a/views/tidbits/nav.pug
+++ b/views/tidbits/nav.pug
@@ -1,14 +1,16 @@
 mixin nav
   nav(class='nav')
     a.logo(href='/')
-      img.logo(src='images/logo.svg')
+      img.logo(src='/images/logo.svg')
     ul.nav-list
       li.nav-item
         a(href='/art') Art
       li.nav-item
         a(href='/writing') Writing
       li.nav-item
+        a(href='/wiki') Wiki
+      li.nav-item
         a(href='/about') About
       li.nav-item
         a(href='http://webring.xxiivv.com/' title='Webring')
-         img.webring(src='images/icon.white.svg' alt='Webring')
+         img.webring(src='/images/icons/webring.svg' alt='Webring')
