--- a/views/tidbits/nav.pug
+++ b/views/tidbits/nav.pug
@@ -3,10 +3,10 @@ mixin nav
     a.logo(href='/')
       img.logo(src='/images/logo.svg')
     ul.nav-list
-      li.nav-item
-        a(href='/art') Art
-      li.nav-item
-        a(href='/writing') Writing
+      //li.nav-item
+      //  a(href='/art') Art
+      //li.nav-item
+      //  a(href='/writing') Writing
       li.nav-item
         a(href='/wiki') Wiki
       li.nav-item
