--- a/views/tidbits/footer.pug
+++ b/views/tidbits/footer.pug
@@ -2,4 +2,4 @@ mixin footer
   footer
     .footer-misc
       a(href='https://github.com/drisc/') github 
-      span &centerdot; 2018
+      span &bullet; 2018
