--- a/views/tidbits/nav.pug
+++ b/views/tidbits/nav.pug
@@ -8,9 +8,11 @@ mixin nav
       //li.nav-item
       //  a(href='/writing') Writing
       li.nav-item
-        a(href='/wiki') Wiki
+        a(href='/wiki')
+          span Wiki
       li.nav-item
-        a(href='/about') About
+        a(href='/about')
+          span About
       li.nav-item
         a(href='http://webring.xxiivv.com/' title='Webring')
          img.webring(src='/images/icons/webring.svg' alt='Webring')
