Added project status to Vervatem

--- a/views/wiki/vervatem.pug
+++ b/views/wiki/vervatem.pug
@@ -10,6 +10,9 @@ block content
         li.w-p-s-item
           span V&nbsp;&bullet;&nbsp; 
           span 0.0.0
+        li.w-p-s-item
+          span STAT&nbsp;&bullet;&nbsp; 
+          span Research
     div
       h1 Vervatem
       span Vervatem will be an attempt to create a fully terminal based chat client which communicates over the DAT Protocol.
