Update to a header in Straal

--- a/views/wiki/straal.pug
+++ b/views/wiki/straal.pug
@@ -50,7 +50,7 @@ block content
           img(src='/images/icons/wiki/straal/centarus.svg')
           span.wiki-label Centarus
           span.wiki-desc Synology DS216j NAS
-      h2(style='text-align:center') Far
+      h2(style='text-align:center') Far Far Away
       ul.catagories
         li.wiki-item
           img(src='/images/icons/wiki/straal/rigel.svg')
