Updated email and nav webring class

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -13,8 +13,8 @@ html
   background-color #212121
   min-width 250px
 body
-
   line-height 1em
+  font-size 1em
   font-family 'Source Sans Pro', 'Open Sans', sans-serif
 ::selection
   background #FF9933
