--- a/views/about.pug
+++ b/views/about.pug
@@ -9,7 +9,7 @@ block content
     p(style='text-align: center') Sometimes ventures off the island
     p(style='text-align: center')
       span emails &nbsp; &bullet; &nbsp;
-      a(href='mailto:mail@drisc.io' class='outbound') mail@drisc.io
+      a(href='mailto:cory@drisc.io' class='outbound') cory@drisc.io
       br
       span tweets &nbsp; &bullet; &nbsp;
       a(href='https://twitter.com/driscio' class='outbound') @driscio
