Changed color status bar

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -216,8 +216,14 @@ span.wiki-desc
   grid-template-rows 25px
   width 100%
   height 25px
-  background-color #282323
+  color #212121
+  background-color #f9f9f0
   font-size 1em
+  a:link, a:visited
+    color #DD7414
+  a:hover, a:hover:after
+    color #01525D
+    
 ul.w-p-s-list
   grid-column 2
   display flex
