--- a/views/wiki/straal.pug
+++ b/views/wiki/straal.pug
@@ -13,9 +13,9 @@ block content
           span.wiki-label Sol
           span.wiki-desc Mac Mini
         li.wiki-item
-          img(src='/images/icons/wiki/straal/procyon.svg')
-          span.wiki-label Procyon
-          span.wiki-desc iPhone 6S Plus
+          img(src='/images/icons/wiki/straal/altair.svg')
+          span.wiki-label Altair
+          span.wiki-desc iPhone X
         li.wiki-item
           img(src='/images/icons/wiki/straal/merope.svg')
           span.wiki-label Merope
