[Wiki] Edited about and removed vervatem

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -210,6 +210,8 @@ span.wiki-label
 span.wiki-desc
   display block
   font-size 85%
+
+// Project Status 
 .wiki-project-status
   display grid
   grid-template-columns 5px auto 5px
@@ -223,7 +225,6 @@ span.wiki-desc
     color #DD7414
   a:hover, a:hover:after
     color #01525D
-    
 ul.w-p-s-list
   grid-column 2
   display flex
