--- a/views/about.pug
+++ b/views/about.pug
@@ -5,11 +5,17 @@ block content
     img(src='/images/cory_b&w.jpg' title='A Person, name of Driscoll')
   .about
     h1 Cory Driscoll
-    p 23-ish web dude, drinks teas and presses keys
+    p(style='text-align: center') 23-ish web dude, drinks teas and presses keys
     p(style='text-align: center') Sometimes ventures off the island
     p(style='text-align: center')
       span emails &nbsp; &bullet; &nbsp;
       a(href='mailto:cory@drisc.io' class='outbound') cory@drisc.io
       br
+      span toots &nbsp; &bullet; &nbsp;
+      a(href='https://sunbeam.city/@drisc' class='outbound') @drisc@sunbeam.city
+      br
       span tweets &nbsp; &bullet; &nbsp;
       a(href='https://twitter.com/driscio' class='outbound') @driscio
+      br
+      span scuttlebutt &nbsp; &bullet; &nbsp;
+      code @IU9LdGLG+9Ma69ZYb9exrlC1uascqX1kX0yp0Vc+G6k=.ed25519
