[About] Added new social links and styled link box

--- a/views/about.pug
+++ b/views/about.pug
@@ -7,15 +7,14 @@ block content
     h1 Cory Driscoll
     p(style='text-align: center') 23-ish web dude, drinks teas and presses keys
     p(style='text-align: center') Sometimes ventures off the island
-    p(style='text-align: center')
-      span emails &nbsp; &bullet; &nbsp;
+    div(class='social')
+      span emails&nbsp;&nbsp;&bullet;&nbsp;&nbsp;
       a(href='mailto:cory@drisc.io' class='outbound') cory@drisc.io
       br
-      span toots &nbsp; &bullet; &nbsp;
+      span toots&nbsp;&nbsp;&bullet;&nbsp;&nbsp;
       a(href='https://sunbeam.city/@drisc' class='outbound') @drisc@sunbeam.city
       br
-      span tweets &nbsp; &bullet; &nbsp;
+      span tweets&nbsp;&nbsp;&bullet;&nbsp;&nbsp;
       a(href='https://twitter.com/driscio' class='outbound') @driscio
       br
-      span scuttlebutt &nbsp; &bullet; &nbsp;
-      code @IU9LdGLG+9Ma69ZYb9exrlC1uascqX1kX0yp0Vc+G6k=.ed25519
+      span scuttlebutt&nbsp;&nbsp;&bullet;&nbsp;&nbsp;@IU9LdGLG+9Ma69ZYb9exrlC1uascqX1kX0yp0Vc+G6k=.ed25519
