--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -293,6 +293,11 @@ li.w-p-s-item
   justify-self center
   h1
     text-align center
+.social
+  width 100%
+  border-radius 10px
+  background #111111
+  padding 5px 10px
 
 
 .avatar
