--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -2,6 +2,14 @@
   Global
 */
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Source+Sans+Pro')
+/*
+  Fonts
+*/
+@font-face
+  font-family BattalionMono
+  src url(/fonts/BattalionMono-Regular.woff) format('woff'),
+      url(/fonts/BattalionMono-Regular.woff2) format('woff2'),
+      url(/fonts/BattalionMono-Regular.eot) format('eot')
 *
   box-sizing border-box
   -moz-box-sizing border-box
@@ -13,18 +21,19 @@ html
   background-color #212121
   min-width 250px
 body
-  line-height 1em
+  line-height 150%
   font-size 1em
   font-family 'Source Sans Pro', 'Open Sans', sans-serif
+
 ::selection
   background #FF9933
-
 ::-moz-selection
   background #FF9933
 
 ::-webkit-input-placeholder
   text-align center
 h1, h2, h3, h4, h5, h6
+  font-family BattalionMono
   line-height 1em
   padding-bottom 0
 h1.responsive-text
