[Style] Changed width of info bar on wiki, added padding to outbound links

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -49,6 +49,8 @@ a:hover
   -webkit-slide-transition .2s
   transition .2s
 // Outbound Links
+a.outbound
+  padding-left 5px
 a.outbound:after
   content '↗'
   font-size 50%
@@ -225,7 +227,7 @@ span.wiki-desc
   display grid
   grid-template-columns 5px auto 5px
   grid-template-rows 25px
-  width 100%
+  width 27%
   height 25px
   color #212121
   background-color #f9f9f0
