[Nav] Removed outbound class from webring icon

--- a/views/tidbits/nav.pug
+++ b/views/tidbits/nav.pug
@@ -14,5 +14,5 @@ mixin nav
         a(href='/about')
           span About
       li.nav-item
-        a(href='http://webring.xxiivv.com/' title='Webring' class='outbound')
+        a(href='http://webring.xxiivv.com/' title='Webring')
          img.webring(src='/images/icons/webring.svg' alt='Webring')
