--- a/views/wiki/humes.pug
+++ b/views/wiki/humes.pug
@@ -9,25 +9,32 @@ block content
       ul.w-p-s-list
         li.w-p-s-item
           span VER&nbsp;&bullet;&nbsp; 
-          span 0.0.1
+          span 0.0.5
         li.w-p-s-item
           span SRC&nbsp;&bullet;&nbsp;
             a(href='https://github.com/drisc/humes' class='outbound')
               span GIT
         li.w-p-s-item
-          span STAT&nbsp;&bullet;&nbsp; 
-          span Research
+          span STATUS&nbsp;&bullet;&nbsp; 
+          span InDev
     div
-      h1 Humes
-      span Humes is a set of programs designed to run as a distributed environment monitor and control system.
+      h1 Humes | Environmental Sensors &amp; Controls
+      span Humes is a set of programs and hardware designed to run as a distributed environment monitor and control system.
     div
-      h2 Name
-      p HUMan Environmental Sensor
+      h2 Computation Nodes
+      p A Raspberry Pi Zero W which acts as a hub for the sensors in the area, running a program which saves data to an <a class='outbound' href='https://ipfs.io'>IPFS</a> drive. This can be accessed from any node. The <a href='#OES'>OES</a> data is uploaded to WeatherUnderground to help inform conditions for people in the area.
+      p Each node can run via a standard WiFi network or run in Distributed Mesh Mode using only one Node to upload data to the Internet. The Mesh will accept commands from physical switches on the Node itself or via remote switches connected to the DMM. The control API will be exposed so creating desktop or web apps to automate tasks will also be possible.
+      h4 Distributed Mesh Mode
+      p A protocol which allows devices running the same software to communicate with each other without the need for a central routing device. Devices can be chained to pass data down to the nearest computation node where it will be added to the <a class='outbound' href='https://ipfs.io'>IPFS</a> drive and distributed to the other Computation Nodes.
+      p Example:&nbsp;OES&nbsp;--&gt;&nbsp;IES&nbsp;--&gt;&nbsp;Computation Node
     div
-      h2 Purpose
-      p Tracking of weather conditions for realtime data and to inform environmental controls.
-    div
-      h2 Concept
-      p A small circuitboard holding an ESP8266 with a DHT22, TLS2165, BMP180 and a raindrop sensor. <br> All components housed in a small enclosure and placed outside, using a solar panel and on-board battery for power.
-      p Connected to small WiFi node which allows posting of weather information to WeatherUnderground and internal database to inform EC.
-      p Connects to a small Pi Zero W server that hosts routing and control software for the EC.
+      h2 Shards
+      h3(style='color: #FD2') Testing
+      h3(id='OES') Outdoor Environment Sensor
+      p A small circuit board holding an ESP8266 with a DHT22, TLS2165, BMP180 and a raindrop sensor.&nbsp; All components housed in a small enclosure and placed outside, using a solar panel and on-board battery for power.
+      h3 Indoor Environment Sensor
+      p A smaller version of the OES without the light, pressure or rain sensors which measures room temp and includes an air particulate and smoke sensor.
+
+      h3(style='color: #DD5634') Planned
+      h3 Power Switches
+      p Small relay switches which can be controlled with either <a class='outbound' href='https://en.wikipedia.org/wiki/Power-line_communication'>PLC</a> or DMM. These can be added to existing devices such as lamps and fans or used as the base for building an entirely new piece of controllable equipment.
