[Style] More fixes to Wiki Project Status

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -240,6 +240,8 @@ span.wiki-desc
     color #DD7414
   a:hover, a:hover:after
     color #01525D
+  @media only screen and (min-width: 700px)
+    width 50vw
   @media only screen and (max-width: 600px)
     width 100%
     font-size 90%
