[Style] More fixes to Wiki Project Status

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -240,9 +240,9 @@ span.wiki-desc
     color #DD7414
   a:hover, a:hover:after
     color #01525D
-  @media only screen and (min-width: 700px)
+  @media only screen and (min-width: 600px) and (max-width: 922px)
     width 50vw
-  @media only screen and (max-width: 600px)
+  @media only screen and (max-width: 620px)
     width 100%
     font-size 90%
   @media only screen and (max-width: 320px)
