--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -245,7 +245,7 @@ span.wiki-desc
   @media only screen and (max-width: 620px)
     width 100%
     font-size 90%
-  @media only screen and (max-width: 320px)
+  @media only screen and (min-width: 320px) and (max-width: 500px)
     width 100%
     font-size 50%
 ul.w-p-s-list
@@ -258,7 +258,7 @@ ul.w-p-s-list
   margin 0
   padding 0
 li.w-p-s-item
-  width 100px
+  width 33%
   line-height 150%
   margin 0
   text-align center
