--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -172,10 +172,11 @@ a:hover .webring
   grid-template-columns 20px auto 20px
   grid-template-rows auto auto 40px
   width 100%
-  padding 0 5%
-  @media only screen and (max-width:600px)
+  padding 0 15vw
+  @media only screen and (min-width:200px) and (max-width: 800px)
     grid-template-columns 2px auto 2px
     grid-template-rows auto auto 40px
+    padding 0 5%
 
 .content
   width 100%
@@ -228,7 +229,7 @@ span.wiki-desc
   display grid
   grid-template-columns 5px auto 5px
   grid-template-rows 25px
-  width 40%
+  width 40vw
   max-width 650px
   min-width 282px
   margin 0 0 0 auto
@@ -247,7 +248,7 @@ span.wiki-desc
     font-size 90%
   @media only screen and (min-width: 320px) and (max-width: 500px)
     width 100%
-    font-size 50%
+    font-size 70%
 ul.w-p-s-list
   grid-column 2
   display flex
