[About] Updated picture, removed scuttlebut ID (breaks style on mobile), modified picture width on large screens

--- a/views/about.pug
+++ b/views/about.pug
@@ -2,7 +2,7 @@ extends templates/layout
 
 block content
   .avatar
-    img(src='/images/cory_b&w.jpg' title='A Person, name of Driscoll')
+    img(src='/images/me/self_20180916.jpg' title='A Person, name of Driscoll')
   .about
     h1 Cory Driscoll
     p(style='text-align: center') 23-ish web dude, drinks teas and presses keys
@@ -16,5 +16,3 @@ block content
       br
       span tweets&nbsp;&nbsp;&bullet;&nbsp;&nbsp;
       a(href='https://twitter.com/driscio' class='outbound') @driscio
-      br
-      span scuttlebutt&nbsp;&nbsp;&bullet;&nbsp;&nbsp;@IU9LdGLG+9Ma69ZYb9exrlC1uascqX1kX0yp0Vc+G6k=.ed25519
