[Calendar] Added info page for Afiur

--- a/public/stylesheets/style.styl
+++ b/public/stylesheets/style.styl
@@ -82,6 +82,17 @@ button
   background-color green
   border none
 /*
+  Pedantic styling
+*/
+.under-title
+  margin-top -18px
+  font-size 85%
+  color #5D5D5D
+ul.no-indent
+  margin-left -40px
+li.no-style
+  list-style-type none
+/*
   Login
 */
 .login-content
