[straal] Added Vega and moved a couple of devices

--- a/views/wiki/straal.pug
+++ b/views/wiki/straal.pug
@@ -17,6 +17,16 @@ block content
           span.wiki-label Altair
           span.wiki-desc iPhone X
         li.wiki-item
+          img(src='/images/icons/wiki/straal/vega.svg')
+          span.wiki-label Vega
+          span.wiki-desc Arch Linux Desktop
+      h2(style='text-align:center') Peripheral
+      ul.catagories
+        li.wiki-item
+          img(src='/images/icons/wiki/straal/naos.svg')
+          span.wiki-label Naos
+          span.wiki-desc Raspberry Pi 3
+        li.wiki-item
           img(src='/images/icons/wiki/straal/merope.svg')
           span.wiki-label Merope
           span.wiki-desc iPad Pro 10.5 inch
@@ -24,12 +34,6 @@ block content
           img(src='/images/icons/wiki/straal/sirius.svg')
           span.wiki-label Sirius
           span.wiki-desc ThinkPad X201
-      h2(style='text-align:center') Peripheral
-      ul.catagories
-        li.wiki-item
-          img(src='/images/icons/wiki/straal/naos.svg')
-          span.wiki-label Naos
-          span.wiki-desc Raspberry Pi 3
       h2(style='text-align:center') Stargates
       ul.catagories
         li.wiki-item
